feat: add viking page

--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -162,6 +162,9 @@
 .fontSize-16{
   font-size: 1rem;
 }
+.fontSize-24{
+  font-size: 1.5rem;
+}
 
 .fontSize-14{
   font-size: 0.875rem;
@@ -297,6 +300,11 @@
 .align-items-center{
   align-items: center;
 }
+.align-items-end{
+  align-items: end;
+}
+
+
 
 .line-height-15{
   line-height: 0.9375rem;
