feat: add viking page

--- a/src/components/tableCell/unitValue/index.module.less
+++ b/src/components/tableCell/unitValue/index.module.less
@@ -6,6 +6,9 @@
 .table-value-text{
   color: var(--ex-light-text-color);
   text-align: left;
+  &.no-style{
+    color: #FFFFFF;
+  }
 }
 
 .table-icon{
