--- a/src/pages/home/index.module.less
+++ b/src/pages/home/index.module.less
@@ -3,12 +3,17 @@
   line-height: 2.5rem;
   font-size: 1.875rem;
   color: #EBB94C;
+  padding-left: 1.2rem;
 }
 
 .hello{
   font-size: 2.5rem;
   padding-top: 2.125rem;
   line-height: 2.75rem;
+  padding-left: 1.2rem;
+  &.link{
+    padding-left: 2.5rem;
+  }
 }
 .title{
   padding-top: 1rem;
@@ -16,12 +21,13 @@
   color: #EBB94C;
   line-height: 2.75rem;
   position: relative;
+  padding-left: 1.5rem;
   &::before{
     position: absolute;
     display: block;
     content: "#";
     font-size: 2.5rem;
     color: #FFFFFF;
-    left: -2.1rem;
+    left: -0.7rem;
   }
 }
