feat: update ui

--- a/src/components/layouts/nav/index.module.less
+++ b/src/components/layouts/nav/index.module.less
@@ -8,6 +8,11 @@
     font-size: 1rem;
     svg{
       fill:#777E91;
+      color: #777E91;
+      &.profile{
+        width: 16px;
+        height: 16px;
+      }
     }
   }
   &.mobile{
