--- a/src/pages/home/components/advisors/index.module.less
+++ b/src/pages/home/components/advisors/index.module.less
@@ -25,10 +25,10 @@
         width: 19%;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        gap: 1rem;
+        gap: 20px;
         padding-bottom: 71px;
         cursor: pointer;
+        align-items: center;
         &.filter{
           opacity: 0.5;
         }
@@ -37,22 +37,24 @@
             width: 40%;
         }
         p{
-          font-size: 24px;
-          padding-top: 9px;
+          font-size: 20px;
+          padding-top: 8px;
+          text-align: center;
         }
         span{
-          font-size: 18px;
+          font-size: 16px;
+          text-align: center;
+          line-height: 16px;
         }
         i{
-          width: 100px;
-          height: 100px;
-          border-radius: 50%;
-          overflow: hidden;
-          box-sizing: border-box;
-          border: 4px #FFFFFF solid;
           img{
+            border-radius: 50%;
+            overflow: hidden;
+            box-sizing: border-box;
+            border: 4px #FFFFFF solid;
+            width: 100px;
+            height: 100px;
             display: block;
-            width: 100%;
           }
         }
       }
