fix search feature

--- a/src/pages/explorerAll/index.module.less
+++ b/src/pages/explorerAll/index.module.less
@@ -1,4 +1,8 @@
 .exploer-all-page{
+  .clear-icon{
+    display: block;
+    height: 24px;
+  }
   .card{
     border-radius: 0.3rem;
     margin-top: 2.187rem;
