--- a/src/pages/home/components/link/index.module.less
+++ b/src/pages/home/components/link/index.module.less
@@ -1,14 +1,15 @@
-.content{
-    width: var(--max-width);
-    @media (max-width: 765px){
-      padding: 0 1.5em 0 2.5em;
-    }
+.content {
+  width: var(--max-width);
+  @media (max-width: 765px) {
+    padding: 0 1.5em 0 2.5em;
+  }
   padding-top: 40px;
-  .link{
+  .link {
     padding-top: 24px;
     padding-bottom: 82px;
-    li{
+    li {
       cursor: pointer;
+      padding-left: 40px;
     }
   }
 }
