--- a/src/pages/home/components/banner/index.module.less
+++ b/src/pages/home/components/banner/index.module.less
@@ -1,37 +1,35 @@
-.bg{
-  background: url("../../../../assets/images/home/bg/banner.png") no-repeat;
+.bg {
+  background: url('../../../../assets/images/home/bg/banner.png') no-repeat;
   background-size: cover;
   height: 42.625rem;
   display: flex;
   justify-content: center;
-  @media (max-width: 765px){
+  @media (max-width: 765px) {
     height: 58rem;
   }
-  .content{
-     max-width: var(--max-width);
-    @media (max-width: 765px){
+  .content {
+    // max-width: var(--max-width);
+    @media (max-width: 765px) {
       padding: 0 1.5em 0 2.5em;
     }
-    .logo{
+    .logo {
       margin-top: 1.25rem;
-      img{
+      img {
         width: 8.75rem;
         display: block;
       }
     }
-    .link{
+    .link {
       padding-top: 4.4rem;
       gap: 40px;
-      a{
+      a {
         display: flex;
         align-items: center;
-        color: #FFFFFF;
+        color: #ffffff;
         text-decoration: none;
         font-size: 2.1875rem;
         gap: 5px;
       }
     }
-
-
   }
 }
