--- a/src/pages/home/components/link/index.module.less
+++ b/src/pages/home/components/link/index.module.less
@@ -4,9 +4,11 @@
     padding: 0 1.5em 0 2.5em;
   }
   padding-top: 40px;
+  padding-left: 8px;
   .link {
     padding-top: 24px;
     padding-bottom: 82px;
+
     li {
       cursor: pointer;
       padding-left: 40px;
